dev/tests/cases/pos/31_unsafe.tv
df main() -> void {
    unsafe set b: i8 = 200;
    echo!(b);
    set v: i8 = 1;
    unsafe v = 300;
    echo!(v);
    unsafe fixed c: u8 = 300;
    echo!(c);
}
