dev/tests/cases/neg/32_when_needs_fallback.tv
df main() -> void {
    set n: i64 = 1;
    when n {
        1 => echo!("one");
    }
}
